adjust #1 to overwrite csv output to existing file

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -43,18 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
     "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,19 +73,19 @@
     "\n",
     "    def write_to_csv(self, out_file_name):\n",
     "        if os.path.isfile(self._file_name): \n",
-    "            with open(out_file_name, 'a') as outcsv:   \n",
+    "            with open(out_file_name, 'w') as outcsv:\n",
     "                # configure writer to write standard csv file\n",
     "                writer = csv.writer(outcsv, delimiter=',', quoting=csv.QUOTE_MINIMAL, lineterminator='\\n')\n",
-    "                writer.writerow(['Case_id', 'Timestamp', 'Activity'])\n",
+    "                writer.writerow(['case', 'timestamp', 'activity'])\n",
     "                for item in self._parsing_comp:\n",
     "                    # write item to outcsv\n",
     "                    writer.writerow([item[1].split(' ')[1], item[2], item[5]])\n",
-    "            print('Sucessfully wrote log info to csv!')"
+    "            print('Successfully wrote log info to csv!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,12 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[['CASE', 'id 1', '2021-01-04 21:36:50.238262', 'count 2', 'DEBUG', 'executed pre function of component auth_proxy'], ['CASE', 'id 1', '2021-01-04 21:36:50.338262', 'count 3', 'DEBUG', 'executed pre function of component guardia_api'], ['CASE', 'id 1', '2021-01-04 21:36:50.438262', 'count 4', 'DEBUG', 'executed pre function of component email_service'], ['CASE', 'id 1', '2021-01-04 21:36:50.538262', 'count 5', 'DEBUG', 'executed pre function of component indicator_parser'], ['CASE', 'id 1', '2021-01-04 21:36:50.638262', 'count 6', 'DEBUG', 'executed pre function of component worker'], ['CASE', 'id 1', '2021-01-04 21:36:50.738262', 'count 7', 'DEBUG', 'executed pre function of component workflow_engine'], ['CASE', 'id 1', '2021-01-04 21:36:50.838262', 'count 8', 'DEBUG', 'executed pre function of component analytics'], ['CASE', 'id 1', '2021-01-04 21:36:50.938262', 'count 9', 'DEBUG', 'executed pre function of component correlator'], ['CASE', 'id 1', '2021-01-04 21:36:51.038262', 'count 10', 'DEBUG', 'executed pre function of component notification_service'], ['CASE', 'id 1', '2021-01-04 21:36:51.138262', 'count 11', 'DEBUG', 'executed post function of component notification_service'], ['CASE', 'id 1', '2021-01-04 21:36:52.738262', 'count 12', 'DEBUG', 'executed post function of component correlator'], ['CASE', 'id 1', '2021-01-04 21:36:52.838262', 'count 13', 'DEBUG', 'executed post function of component analytics'], ['CASE', 'id 1', '2021-01-04 21:36:52.938262', 'count 14', 'DEBUG', 'executed post function of component workflow_engine'], ['CASE', 'id 1', '2021-01-04 21:36:53.038262', 'count 15', 'DEBUG', 'executed post function of component worker'], ['CASE', 'id 1', '2021-01-04 21:36:53.138262', 'count 16', 'DEBUG', 'executed post function of component indicator_parser'], ['CASE', 'id 1', '2021-01-04 21:36:53.238262', 'count 17', 'DEBUG', 'executed post function of component email_service'], ['CASE', 'id 1', '2021-01-04 21:36:53.338262', 'count 18', 'DEBUG', 'executed post function of component guardia_api'], ['CASE', 'id 1', '2021-01-04 21:36:53.438262', 'count 19', 'DEBUG', 'executed post function of component auth_proxy']]\n"
      ]
@@ -113,24 +112,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Sucessfully wrote log info to csv!\n"
+      "Successfully wrote log info to csv!\n"
      ]
     }
    ],
    "source": [
-    "parser.write_to_csv('nice_weather_case.csv')"
+    "parser.write_to_csv('./out/nice_weather_case.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": []
