test process mining lib for #3

--- a/process_mining.ipynb
+++ b/process_mining.ipynb
@@ -24,12 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "import pm4py"
+    "import pm4py\n",
+    "\n",
+    "import pandas as pd\n",
+    "from pm4py.objects.log.util import dataframe_utils\n",
+    "from pm4py.objects.conversion.log import converter as log_converter\n",
+    "from pm4py.objects.log.exporter.xes import exporter as xes_exporter"
    ],
    "metadata": {
     "collapsed": false,
@@ -40,9 +44,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[{'attributes': {'concept:name': 1}, 'events': [{'case': 1, 'timestamp': Timestamp('2021-01-04 21:36:50.238262+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 1, 'timestamp': Timestamp('2021-01-04 21:36:53.438262+0000', tz='UTC'), 'activity': 'executed post function of component auth_proxy'}]}]"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# parse csv to xes log file\n",
+    "log_csv = pd.read_csv('./out/nice_weather_case.csv', sep=',')\n",
+    "log_csv = dataframe_utils.convert_timestamp_columns_in_df(log_csv)\n",
+    "log_csv = log_csv.sort_values('timestamp')\n",
+    "parameters = {log_converter.Variants.TO_EVENT_LOG.value.Parameters.CASE_ID_KEY: 'case'}\n",
+    "event_log = log_converter.apply(log_csv, parameters=parameters, variant=log_converter.Variants.TO_EVENT_LOG)\n",
+    "event_log"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -52,9 +73,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "exporting log, completed traces ::   0%|          | 0/1 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "678330c11bf14aef94dab8f42445ae49"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "xes_exporter.apply(event_log, './out/nice_weather_case.xes')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
