minor adjustments on the code base with process mining demo

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -35,8 +35,7 @@
     "The final log needs to be in XES format as defined like:\n",
     "* case id\n",
     "* timestamp\n",
-    "* activity\n",
-    "* resource"
+    "* activity"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +61,16 @@
     "        self._file_name = file_name\n",
     "        self._parsing_comp = list()\n",
     "\n",
-    "    def parse(self):\n",
+    "    def parse(self) -> None:\n",
     "        if os.path.isfile(self._file_name): \n",
     "            for line in open(self._file_name, \"r\"):\n",
     "                part = line.rstrip().split('::')\n",
     "                self._parsing_comp.append(part)\n",
     "\n",
-    "    def print(self):\n",
+    "    def print(self) -> None:\n",
     "        print(self._parsing_comp)\n",
     "\n",
-    "    def write_to_csv(self, out_file_name):\n",
+    "    def write_to_csv(self, out_file_name) -> None:\n",
     "        if os.path.isfile(self._file_name): \n",
     "            with open(out_file_name, 'w') as outcsv:\n",
     "                # configure writer to write standard csv file\n",
@@ -85,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['CASE', 'id 1', '2021-01-04 21:36:50.238262', 'count 2', 'DEBUG', 'executed pre function of component auth_proxy'], ['CASE', 'id 1', '2021-01-04 21:36:50.338262', 'count 3', 'DEBUG', 'executed pre function of component guardia_api'], ['CASE', 'id 1', '2021-01-04 21:36:50.438262', 'count 4', 'DEBUG', 'executed pre function of component email_service'], ['CASE', 'id 1', '2021-01-04 21:36:50.538262', 'count 5', 'DEBUG', 'executed pre function of component indicator_parser'], ['CASE', 'id 1', '2021-01-04 21:36:50.638262', 'count 6', 'DEBUG', 'executed pre function of component worker'], ['CASE', 'id 1', '2021-01-04 21:36:50.738262', 'count 7', 'DEBUG', 'executed pre function of component workflow_engine'], ['CASE', 'id 1', '2021-01-04 21:36:50.838262', 'count 8', 'DEBUG', 'executed pre function of component analytics'], ['CASE', 'id 1', '2021-01-04 21:36:50.938262', 'count 9', 'DEBUG', 'executed pre function of component correlator'], ['CASE', 'id 1', '2021-01-04 21:36:51.038262', 'count 10', 'DEBUG', 'executed pre function of component notification_service'], ['CASE', 'id 1', '2021-01-04 21:36:51.138262', 'count 11', 'DEBUG', 'executed post function of component notification_service'], ['CASE', 'id 1', '2021-01-04 21:36:52.738262', 'count 12', 'DEBUG', 'executed post function of component correlator'], ['CASE', 'id 1', '2021-01-04 21:36:52.838262', 'count 13', 'DEBUG', 'executed post function of component analytics'], ['CASE', 'id 1', '2021-01-04 21:36:52.938262', 'count 14', 'DEBUG', 'executed post function of component workflow_engine'], ['CASE', 'id 1', '2021-01-04 21:36:53.038262', 'count 15', 'DEBUG', 'executed post function of component worker'], ['CASE', 'id 1', '2021-01-04 21:36:53.138262', 'count 16', 'DEBUG', 'executed post function of component indicator_parser'], ['CASE', 'id 1', '2021-01-04 21:36:53.238262', 'count 17', 'DEBUG', 'executed post function of component email_service'], ['CASE', 'id 1', '2021-01-04 21:36:53.338262', 'count 18', 'DEBUG', 'executed post function of component guardia_api'], ['CASE', 'id 1', '2021-01-04 21:36:53.438262', 'count 19', 'DEBUG', 'executed post function of component auth_proxy']]\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-3-6918117e7a18>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mparser\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mparse\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0mparser\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m<ipython-input-1-c46067c6c8ce>\u001B[0m in \u001B[0;36mparse\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      6\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0mparse\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m->\u001B[0m \u001B[0;32mNone\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 7\u001B[0;31m         \u001B[0;32mif\u001B[0m \u001B[0mos\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpath\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0misfile\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_file_name\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      8\u001B[0m             \u001B[0;32mfor\u001B[0m \u001B[0mline\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mopen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_file_name\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"r\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      9\u001B[0m                 \u001B[0mpart\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mline\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mrstrip\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msplit\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'::'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'os' is not defined"
      ]
     }
    ],
@@ -112,14 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully wrote log info to csv!\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-4-04099a4706a9>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mparser\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mwrite_to_csv\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'./out/nice_weather_case.csv'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m<ipython-input-1-c46067c6c8ce>\u001B[0m in \u001B[0;36mwrite_to_csv\u001B[0;34m(self, out_file_name)\u001B[0m\n\u001B[1;32m     14\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     15\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0mwrite_to_csv\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mout_file_name\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m->\u001B[0m \u001B[0;32mNone\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 16\u001B[0;31m         \u001B[0;32mif\u001B[0m \u001B[0mos\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpath\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0misfile\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_file_name\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     17\u001B[0m             \u001B[0;32mwith\u001B[0m \u001B[0mopen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mout_file_name\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'w'\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0moutcsv\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     18\u001B[0m                 \u001B[0;31m# configure writer to write standard csv file\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'os' is not defined"
      ]
     }
    ],
