--- a/process_mining.ipynb
+++ b/process_mining.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "import os\n",
@@ -33,7 +33,11 @@
     "import pandas as pd\n",
     "from pm4py.objects.log.util import dataframe_utils\n",
     "from pm4py.objects.conversion.log import converter as log_converter\n",
-    "from pm4py.objects.log.exporter.xes import exporter as xes_exporter"
+    "from pm4py.objects.log.exporter.xes import exporter as xes_exporter\n",
+    "from pm4py.objects.log.importer.xes import importer as xes_importer\n",
+    "\n",
+    "from pm4py.algo.discovery.heuristics import algorithm as heuristics_miner\n",
+    "from pm4py.visualization.petrinet import visualizer as pn_visualizer"
    ],
    "metadata": {
     "collapsed": false,
@@ -44,25 +48,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[{'attributes': {'concept:name': 1}, 'events': [{'case': 1, 'timestamp': Timestamp('2021-01-04 21:36:50.238262+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 1, 'timestamp': Timestamp('2021-01-04 21:36:53.438262+0000', tz='UTC'), 'activity': 'executed post function of component auth_proxy'}]}]"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 29,
+   "outputs": [],
    "source": [
-    "# parse csv to xes log file\n",
-    "log_csv = pd.read_csv('./out/nice_weather_case.csv', sep=',')\n",
-    "log_csv = dataframe_utils.convert_timestamp_columns_in_df(log_csv)\n",
-    "log_csv = log_csv.sort_values('timestamp')\n",
-    "parameters = {log_converter.Variants.TO_EVENT_LOG.value.Parameters.CASE_ID_KEY: 'case'}\n",
-    "event_log = log_converter.apply(log_csv, parameters=parameters, variant=log_converter.Variants.TO_EVENT_LOG)\n",
-    "event_log"
+    "class ProcessMining:\n",
+    "    def __init__(self):\n",
+    "        self._event_log = list()\n",
+    "\n",
+    "    def print(self) -> None:\n",
+    "        print(self._event_log)\n",
+    "\n",
+    "    def convert_to_xes(self, _csv_file_name: str, _xes_file_name: str) -> None:\n",
+    "        # parse csv to xes log file\n",
+    "        log_csv = pd.read_csv(_csv_file_name, sep=',')\n",
+    "        log_csv = dataframe_utils.convert_timestamp_columns_in_df(log_csv)\n",
+    "        log_csv = log_csv.sort_values('timestamp')\n",
+    "        parameters = {log_converter.Variants.TO_EVENT_LOG.value.Parameters.CASE_ID_KEY: 'case'}\n",
+    "        self._event_log = log_converter.apply(log_csv, parameters=parameters,\n",
+    "                                        variant=log_converter.Variants.TO_EVENT_LOG)\n",
+    "        xes_exporter.apply(self._event_log, self._xes_file_name)\n",
+    "\n",
+    "    def heuristic_miner(self, _out_image_path: str) -> None:\n",
+    "        net, im, fm = heuristics_miner.apply_heu(self._event_log,\n",
+    "            parameters={heuristics_miner.Variants.CLASSIC.value.Parameters.DEPENDENCY_THRESH: 0.1})\n",
+    "        gviz = pn_visualizer.apply(net, im, fm)\n",
+    "        pn_visualizer.view(gviz)\n",
+    "        pn_visualizer.save(gviz, _out_image_path)\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -73,23 +85,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "outputs": [
     {
-     "data": {
-      "text/plain": "exporting log, completed traces ::   0%|          | 0/1 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "678330c11bf14aef94dab8f42445ae49"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "AttributeError",
+     "evalue": "'ProcessMining' object has no attribute 'print'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-34-3427de56dfac>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      2\u001B[0m                      out_file_name='./out/nice_weather_case.xes')\n\u001B[1;32m      3\u001B[0m \u001B[0mmine\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mconvert_to_xes\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 4\u001B[0;31m \u001B[0mmine\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m: 'ProcessMining' object has no attribute 'print'"
+     ]
     }
    ],
    "source": [
-    "xes_exporter.apply(event_log, './out/nice_weather_case.xes')"
+    "mine = ProcessMining()\n",
+    "mine.convert_to_xes(_csv_file_name='./out/nice_weather_case.csv',\n",
+    "                     _xes_file_name='./out/nice_weather_case.xes')\n",
+    "mine.print()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ProcessMining' object has no attribute 'heuristic_miner'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-36-e0d820f25934>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mmine\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mheuristic_miner\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'./out/nice_weather_miner.jpg'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'ProcessMining' object has no attribute 'heuristic_miner'"
+     ]
+    }
+   ],
+   "source": [
+    "mine.heuristic_miner('./out/nice_weather_miner.jpg')\n"
    ],
    "metadata": {
     "collapsed": false,
