add todos process_mining

--- a/process_mining.ipynb
+++ b/process_mining.ipynb
@@ -23,6 +23,21 @@
    }
   },
   {
+   "source": [
+    "# TODO:\n",
+    "   - Identify issues in logs with process mining \n",
+    "\n",
+    "\n",
+    "   - Alpha Miner\n",
+    "   - Petri Nets\n",
+    "   - Directly Follows Graph (time factor)\n",
+    "   - Replay\n",
+    "   - Diagnostics "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "outputs": [],
