improve doc in process mining file

--- a/process_mining.ipynb
+++ b/process_mining.ipynb
@@ -14,32 +14,32 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Use the 'pm4py' library to create a process mining model of the demo log structure.\n",
-    "The goal is to use the replay mechanism to evaluate the log with a petri net."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "Use the 'pm4py' library to create a process mining model of a demo log.\n",
+    "The goal is to be able to identify issues in the SOC Toolkit logs with process mining."
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# TODO:\n",
-    "   - Identify issues in logs with process mining \n",
-    "\n",
-    "\n",
+    "## Process Mining Tools:\n",
     "   - Alpha Miner\n",
     "   - Petri Nets\n",
     "   - Directly Follows Graph (time factor)\n",
     "   - Replay\n",
     "   - Diagnostics "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -53,25 +53,27 @@
     "\n",
     "from pm4py.algo.discovery.heuristics import algorithm as heuristics_miner\n",
     "from pm4py.visualization.petrinet import visualizer as pn_visualizer"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class ProcessMining:\n",
     "    def __init__(self):\n",
     "        self._event_log = list()\n",
     "\n",
-    "    def print(self) -> None:\n",
-    "        print(self._event_log)\n",
+    "    def print(self, show_slice_list = True) -> None:\n",
+    "        if(show_slice_list):\n",
+    "            print(self._event_log[0:5])\n",
+    "        else:\n",
+    "            print(self._event_log)\n",
     "\n",
     "    def convert_to_xes(self, _csv_file_name: str, _xes_file_name: str) -> None:\n",
     "        # parse csv to xes log file\n",
@@ -81,77 +83,61 @@
     "        parameters = {log_converter.Variants.TO_EVENT_LOG.value.Parameters.CASE_ID_KEY: 'case'}\n",
     "        self._event_log = log_converter.apply(log_csv, parameters=parameters,\n",
     "                                        variant=log_converter.Variants.TO_EVENT_LOG)\n",
-    "        xes_exporter.apply(self._event_log, self._xes_file_name)\n",
-    "\n",
-    "    def heuristic_miner(self, _out_image_path: str) -> None:\n",
-    "        net, im, fm = heuristics_miner.apply_heu(self._event_log,\n",
-    "            parameters={heuristics_miner.Variants.CLASSIC.value.Parameters.DEPENDENCY_THRESH: 0.1})\n",
-    "        gviz = pn_visualizer.apply(net, im, fm)\n",
-    "        pn_visualizer.view(gviz)\n",
-    "        pn_visualizer.save(gviz, _out_image_path)\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "        xes_exporter.apply(self._event_log, _xes_file_name)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Long Correlator Case"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'ProcessMining' object has no attribute 'print'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-34-3427de56dfac>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      2\u001B[0m                      out_file_name='./out/nice_weather_case.xes')\n\u001B[1;32m      3\u001B[0m \u001B[0mmine\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mconvert_to_xes\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 4\u001B[0;31m \u001B[0mmine\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m: 'ProcessMining' object has no attribute 'print'"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b6c3d4706e7048a99a153cda1e108d55",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "exporting log, completed traces ::   0%|          | 0/1000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'attributes': {'concept:name': 54}, 'events': [{'case': 54, 'timestamp': Timestamp('2021-01-12 17:18:00.431256+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 54, 'timestamp': Timestamp('2021-01-12 17:18:05.031256+0000', tz='UTC'), 'activity': 'executed post function of component guardia_api'}]}, {'attributes': {'concept:name': 76}, 'events': [{'case': 76, 'timestamp': Timestamp('2021-01-12 17:18:00.626463+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 76, 'timestamp': Timestamp('2021-01-12 17:18:10.126463+0000', tz='UTC'), 'activity': 'executed post function of component guardia_api'}]}, {'attributes': {'concept:name': 106}, 'events': [{'case': 106, 'timestamp': Timestamp('2021-01-12 17:18:00.692066+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 106, 'timestamp': Timestamp('2021-01-12 17:18:08.992066+0000', tz='UTC'), 'activity': 'executed post function of component guardia_api'}]}, {'attributes': {'concept:name': 97}, 'events': [{'case': 97, 'timestamp': Timestamp('2021-01-12 17:18:00.720196+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 97, 'timestamp': Timestamp('2021-01-12 17:18:12.520196+0000', tz='UTC'), 'activity': 'executed post function of component guardia_api'}]}, {'attributes': {'concept:name': 92}, 'events': [{'case': 92, 'timestamp': Timestamp('2021-01-12 17:18:00.722651+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 92, 'timestamp': Timestamp('2021-01-12 17:18:04.622651+0000', tz='UTC'), 'activity': 'executed post function of component guardia_api'}]}]\n"
      ]
     }
    ],
    "source": [
     "mine = ProcessMining()\n",
-    "mine.convert_to_xes(_csv_file_name='./out/nice_weather_case.csv',\n",
-    "                     _xes_file_name='./out/nice_weather_case.xes')\n",
-    "mine.print()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "# Scenario 1\n",
+    "mine.convert_to_xes(_csv_file_name='./out/long_correlator_case.csv',\n",
+    "                     _xes_file_name='./out/long_correlator_case.xes')\n",
+    "mine.print(show_slice_list=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'ProcessMining' object has no attribute 'heuristic_miner'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-36-e0d820f25934>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mmine\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mheuristic_miner\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'./out/nice_weather_miner.jpg'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'ProcessMining' object has no attribute 'heuristic_miner'"
-     ]
-    }
-   ],
-   "source": [
-    "mine.heuristic_miner('./out/nice_weather_miner.jpg')\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -163,16 +149,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
