add resource column to csv

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -12,15 +12,16 @@
    "metadata": {},
    "source": [
     "Define a parser to extract information out of logs. \n",
-    "The final log needs to be in XES format as defined like:\n",
-    "* case id\n",
-    "* timestamp\n",
-    "* activity"
+    "The final log needs to be in a valid, transformable XES structure as defined like:\n",
+    "  * case id   --> 'case:concept:name'\n",
+    "  * timestamp --> 'timestamp'\n",
+    "  * activity  --> 'concept:name'\n",
+    "  * resource  --> 'org:resource'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,16 +57,17 @@
     "            with open(out_file_name, 'w') as outcsv:\n",
     "                # configure writer to write standard csv file\n",
     "                writer = csv.writer(outcsv, delimiter=',', quoting=csv.QUOTE_MINIMAL, lineterminator='\\n')\n",
-    "                writer.writerow(['case', 'timestamp', 'activity'])\n",
+    "                # Case ID, Timestamp, Activity\n",
+    "                writer.writerow(['case:concept:name', 'timestamp', 'concept:name', 'org:resource'])\n",
     "                for item in self._parsing_comp:\n",
     "                    # write item to outcsv\n",
-    "                    writer.writerow([item[1].split(' ')[1], item[2], item[5]])\n",
+    "                    writer.writerow([item[1].split(' ')[1], item[2], item[5], item[5].split(' ')[5]])\n",
     "            print('Successfully wrote log info to csv!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
